--- a/FeelingsRecord/app/build.gradle
+++ b/FeelingsRecord/app/build.gradle
@@ -23,6 +23,14 @@ android {
 
 }
 
+allprojects{
+    repositories{
+        google()
+        jcenter()
+        maven{ url 'https://jitpack.io' }
+    }
+}
+
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
 
@@ -34,5 +42,6 @@ dependencies {
     implementation 'androidx.recyclerview:recyclerview:1.1.0'
     implementation 'androidx.cardview:cardview:1.0.0'
     implementation 'com.google.android.material:material:1.1.0'
-
+    compile 'com.prolificinteractive:material-calendarview:1.4.3'
+    implementation 'com.github.PhilJay:MPAndroidChart:v2.2.4'
 }
