--- a/FeelingsRecord/app/build.gradle
+++ b/FeelingsRecord/app/build.gradle
@@ -23,6 +23,12 @@ android {
 
 }
 
+allprojects {
+    repositories{
+        maven{ url 'https://jitpack.io'}
+    }
+}
+
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
 
@@ -34,5 +40,7 @@ dependencies {
     implementation 'androidx.recyclerview:recyclerview:1.1.0'
     implementation 'androidx.cardview:cardview:1.0.0'
     implementation 'com.google.android.material:material:1.1.0'
+
+    implementation 'com.github.pedroSG94:AutoPermissions:1.0.3'
 
 }
