--- a/FeelingsRecord/app/build.gradle
+++ b/FeelingsRecord/app/build.gradle
@@ -1,4 +1,6 @@
 apply plugin: 'com.android.application'
+apply plugin: 'kotlin-android'
+apply plugin: 'kotlin-android-extensions'
 
 android {
     compileSdkVersion 29
@@ -6,10 +8,11 @@ android {
 
     defaultConfig {
         applicationId "com.feelings.record"
-        minSdkVersion 16
+        minSdkVersion 21
         targetSdkVersion 29
         versionCode 1
         versionName "1.0"
+        multiDexEnabled true
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
@@ -20,7 +23,20 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
-
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
+    }
+    packagingOptions {
+        exclude 'META-INF/DEPENDENCIES'
+        exclude 'META-INF/LICENSE'
+        exclude 'META-INF/LICENSE.txt'
+        exclude 'META-INF/license.txt'
+        exclude 'META-INF/NOTICE'
+        exclude 'META-INF/NOTICE.txt'
+        exclude 'META-INF/notice.txt'
+        exclude 'META-INF/ASL2.0'
+    }
 }
 
 allprojects {
@@ -30,9 +46,6 @@ allprojects {
         maven { url 'https://jitpack.io' }
     }
 }
-
-apply plugin: 'com.android.application'
-
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
@@ -61,9 +74,32 @@ dependencies {
 
     /*백업관련 google service*/
     implementation 'com.google.android.gms:play-services-auth:17.0.0'
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
+    implementation 'androidx.multidex:multidex:2.0.1'
+    implementation 'com.google.http-client:google-http-client-gson:1.26.0'
+    implementation('com.google.api-client:google-api-client-android:1.26.0')
+    implementation('com.google.apis:google-api-services-drive:v3-rev136-1.25.0') {
+        exclude group: 'com.google.guava'
+    }
+}
 
+configurations.all {
+    resolutionStrategy {
+
+        force 'com.google.code.gson:gson:2.8.0'
+        force 'com.squareup.okhttp3:okhttp:3.9.1'
+
+        eachDependency {
+            DependencyResolveDetails details ->
+                if (details.requested.group == 'com.android.support') {
+                    if (!requested.name.startsWith("multidex")) {
+                        details.useVersion "27.1.1"
+                    }
+                }
+        }
+    }
+}
     /*//백업관련 Firebase
     implementation 'com.google.firebase:firebase-auth:11.6.2'
     implementation 'com.google.firebase:firebase-core:11.6.2'*/
 
-}
