--- a/FeelingsRecord/app/src/main/AndroidManifest.xml
+++ b/FeelingsRecord/app/src/main/AndroidManifest.xml
@@ -1,21 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-package="com.feelings.record">
-
-
-    <!--갤러리 관련 권한추가-->
+    package="com.feelings.record">
+    <!-- 갤러리 관련 권한추가 -->
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
-
-    <!-- 구글 로그인, 계정 설정-->
-    <uses-permission android:name="android.permission.GET_ACCOUNTS"/>
-    <uses-permission android:name="android.permission.MANAGE_ACCOUNTS"/>
-    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" /> <!-- 구글 로그인, 계정 설정 -->
+    <uses-permission android:name="android.permission.GET_ACCOUNTS" />
+    <uses-permission android:name="android.permission.MANAGE_ACCOUNTS" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.INTERNET" />
-
-    <!--백업관련 권한 추가
-    <uses-permission android:name="android.permission.INTERNET" />
-    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />-->
+    <uses-permission android:name="android.permission.WAKE_LOCK" />
+    <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
 
     <application
         android:allowBackup="true"
@@ -24,22 +18,31 @@ package="com.feelings.record">
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".BackupActivity" ></activity>
-        <activity android:name=".FeelwriteActivity"></activity>
-        <activity android:name=".photoAdapter"
-            android:theme="@style/Theme.AppCompat.Dialog"/>
-        <activity android:name=".calchart.CalendarChartActivity"></activity>
+        <activity android:name=".HabitAlarmActivity"></activity>
+        <activity android:name=".BackupActivity" />
+        <activity android:name=".FeelwriteActivity" />
+        <activity
+            android:name=".photoAdapter"
+            android:theme="@style/Theme.AppCompat.Dialog" />
+        <activity android:name=".calchart.CalendarChartActivity" />
         <activity android:name=".PhotoActivity" />
         <activity android:name=".MainActivity">
-
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <receiver android:name=".receiver.DeviceBootReceiver"
+            android:enabled="false">
+            <intent-filter>
+                <action android:name="android.intent.action.BOOT_COMPLETED" />
+            </intent-filter>
+        </receiver>
+
+        <receiver android:name=".receiver.AlarmReceiver" />
+
     </application>
+
 </manifest>
-
-
-
-
